--- a/package.json
+++ b/package.json
@@ -23,45 +23,47 @@
   "license": "MIT",
   "files": [
     "*.md",
+    "dist",
     "lib",
     "umd",
     "index.d.ts"
   ],
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "types": "index.d.ts",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
-    "coveralls": "^3.0.1",
-    "cross-env": "^5.1.6",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "@babel/cli": "^7.22.6",
+    "@babel/preset-env": "^7.22.7",
+    "@babel/register": "^7.22.5",
+    "babel-loader": "^9.1.3",
+    "core-js": "^3.31.1",
+    "coveralls": "^3.1.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
-    "gzip-size-cli": "^2.1.0",
-    "jasmine": "^3.1.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "nyc": "^12.0.2",
-    "rimraf": "^2.6.2",
-    "shx": "^0.2.2",
-    "source-map-support": "^0.5.6",
-    "typescript": "^2.9.1",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^2.1.5"
+    "jasmine": "^5.0.2",
+    "jasmine-spec-reporter": "^7.0.0",
+    "nyc": "^15.1.0",
+    "regenerator-runtime": "^0.13.11",
+    "rimraf": "^5.0.1",
+    "shx": "^0.3.4",
+    "source-map-support": "^0.5.21",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "clean": "rimraf lib && rimraf umd && rimraf coverage",
-    "build:commonjs": "babel src --out-dir lib && shx cp src/index.commonjs.js lib/index.js",
-    "build:umd": "webpack src/index.commonjs.js -o umd/Finity.js --mode development",
-    "build:umd:min": "webpack src/index.commonjs.js -o umd/Finity.min.js --mode production",
-    "build": "npm run clean && npm run build:commonjs && npm run build:umd && npm run build:umd:min && gzip-size umd/Finity.min.js",
+    "clean": "rimraf dist && rimraf coverage",
+    "build:commonjs": "babel src --out-dir dist && shx cp src/index.commonjs.js dist/index.js",
+    "build:umd": "webpack --config webpack.config.babel.js --mode development",
+    "build:umd:min": "webpack --config webpack.config.babel.js --mode production",
+    "build": "npm run clean && npm run build:commonjs && npm run build:umd && npm run build:umd:min",
     "prepare": "npm run build",
+    "postbuild": "shx cp lib/index.js dist/index.js",
     "test:typings": "tsc",
-    "test": "node -r source-map-support/register test/support/jasmineRunner.js && npm run test:typings",
+    "test": "node -r @babel/register -r source-map-support/register test/support/jasmineRunner.js && npm run test:typings",
     "coverage": "nyc --cache false --produce-source-map --reporter lcovonly --reporter text node -r source-map-support/register test/support/jasmineRunner.js && rimraf .nyc_output",
     "lint": "eslint src test examples"
   }
